--- a/src/assets/css/floor/addMachineCard.css
+++ b/src/assets/css/floor/addMachineCard.css
@@ -6,7 +6,7 @@
     justify-content: center;
     cursor: pointer;
     transition: background-color 0.2s ease;
-    min-height: 180px;
+    height: 100%;
   }
   
   .add-machine-card:hover {
