--- a/src/assets/css/machines/queuePanel.css
+++ b/src/assets/css/machines/queuePanel.css
@@ -4,6 +4,7 @@
   border-radius: 0.5rem;
   padding: 1rem;
   color: white;
+  overflow: auto;
 }
 
 .queue-panel__title {
@@ -18,7 +19,12 @@
   margin-bottom: 0.5rem;
 }
 
-/* Items */
+.queue-items {
+  overflow: auto;
+  max-height: 50vh;
+  box-sizing: border-box;
+}
+
 .queue-item {
   border-radius: 0.5rem;
   margin-bottom: 1rem;
